# mcp_cpp_lib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_codec.cpp  bench_dispatch.cpp  bench_e2e_tool_call.cpp  bench_stdio_throughput.cpp
docs/: API_REFERENCE.md  ARCHITECTURE.md  GETTING_STARTED.md
examples/: CMakeLists.txt
examples/client_example/: main.cpp
examples/echo_server/: main.cpp
examples/filesystem_server/: main.cpp
examples/full_featured_server/: main.cpp
examples/prompt_server/: main.cpp
examples/python/: echo_server.py  filesystem_server.py
include/mcp/: client.hpp  codec.hpp  error.hpp  json_rpc.hpp  mcp.hpp  router.hpp  server.hpp  session.hpp  types.hpp  version.hpp
include/mcp/transport/: http_transport.hpp  stdio_transport.hpp  transport.hpp
src/: client.cpp  codec.cpp  json_rpc.cpp  router.cpp  server.cpp  session.cpp  types.cpp
src/transport/: http_transport.cpp  stdio_transport.cpp
tests/: CMakeLists.txt
tests/integration/: test_cancellation.cpp  test_http_e2e.cpp  test_progress.cpp  test_prompts_e2e.cpp  test_resources_e2e.cpp  test_stdio_lifecycle.cpp  test_tools_e2e.cpp
tests/unit/: test_client.cpp  test_codec.cpp  test_json_rpc.cpp  test_pagination.cpp  test_router.cpp  test_server.cpp  test_session.cpp  test_stdio_transport.cpp  test_types.cpp
